Fixed issues with spacing/mixins. Added color change for darkmode

--- a/dev-duckies-sm-proj/src/index.css
+++ b/dev-duckies-sm-proj/src/index.css
@@ -20,6 +20,7 @@
   --primary-icon-color: white;
   --sidebar-selected: hsla(0, 0%, 25%, 0.25);
   --sidebar-select-hover: hsla(0, 0%, 25%, 0.20);
+  --profile-feed-background: rgb(227, 227, 227);
 }
 
 [data-theme="dark"] {
@@ -31,4 +32,5 @@
   --toggle-fg: gray;
   --sidebar-selected: hsla(0, 0%, 25%, 0.75);
   --sidebar-select-hover: hsla(0, 0%, 25%, 0.55);
+  --profile-feed-background: rgb(10, 159, 193);
 }
