--- a/dev-duckies-sm-proj/src/pages/profile-page/styling.scss
+++ b/dev-duckies-sm-proj/src/pages/profile-page/styling.scss
@@ -1,9 +1,16 @@
 @use "bulma/sass/utilities/mixins";
 
+.upper-section{
+  @include mixins.from(769px){
+    padding-left: 2%;
+  }
+  
+}
 #header{
     display:flex;
     flex-direction:column;
     align-items: center;
+    background-color: var(--background-color);
   @include mixins.from(769px) {
     display:flex;
     flex-direction:column;
@@ -25,13 +32,60 @@
  }
 .bio-and-button{
   display:flex;
+  
   flex-direction:column;
   align-items:center;
-  padding-left: 5%;
+  @include mixins.from(769px){
+  padding-left:2%;
+  margin-left:-20px;
+  max-width:200px;
+  }
+  
+}
+.bio-text{
+  display:flex;
+  text-align:center;
+}
+
+.card-content{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  max-width: 300px;
+  padding:0;
+  @include mixins.from(769px){
+    max-width: 250px;
+  }
 }
 
 .bio-textarea{
-  width:150px;
+  width:200px;
   height:50px;
-  margin-left: 5%;
+  resize:none;
+  border:none;
+  
 }
+.bio-textarea:focus{
+  width:200px;
+  height:50px;
+  resize:none;
+  border:none;
+}
+
+#text-area-save{
+  display:flex;
+  justify-content:center;
+  margin-bottom: 5px;
+}
+
+#feed-background{
+  background-color: var(--profile-feed-background) ;
+}
+
+.is-size-3{
+  display:flex;
+  justify-content:center;
+}
+
+.edit-bio{
+  flex:0 0 auto;}
